--- a/BooksApi/BooksApi/index.html
+++ b/BooksApi/BooksApi/index.html
@@ -88,6 +88,7 @@
 
             $("#books").on('click', 'div[class="card"]', function listbox() {
                 var index = $("div[class='card']").index(this);
+                index += 1;
                 console.log(index);
                 var id = index;
                 $.getJSON(uri +'/'+ id + '/details')
